# macronx-tui

./: Cargo.toml  README.md
.cursor/skills/ratatui/: .skillfish.json
.cursor/skills/ratatui/references/: best-practices.md
src/: api.rs  app.rs  config.rs  main.rs  models.rs
src/ui/: inbox_create.rs  inbox_list.rs  inbox_show.rs  mod.rs
